# docs/swagger.yaml
@@ -456,6 +456,24 @@ paths:
           description: Server error
           schema:
             $ref: '#/definitions/ErrorModel'
+  '/lookups/devices/models':
+    get:
+      tags:
+        - Device
+      description: |
+        List distinct device models.
+
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: array
+            items:
+              type: string
+        '500':
+          description: Server error
+          schema:
+            $ref: '#/definitions/ErrorModel'
   '/lookups/countries':
     get:
       tags:
